--- a/style/custom-style.css
+++ b/style/custom-style.css
@@ -63,6 +63,7 @@ header,
 }
 
 .navbar-right span {
+    font-size: 14pt;
     position: relative;
     color: rgb(235, 243, 232);
 }
@@ -275,4 +276,11 @@ input[type="checkbox"] {
 input[type="checkbox"]:checked {
     border: 1px solid rgb(134, 167, 137);
     background-color: rgb(134, 167, 137);
+}
+
+.btn-checkbox {
+    width: 60%;
+    height: 40%;
+    border: 3px solid red;
+    border-radius: 20px;
 }
