--- a/style/custom-style.css
+++ b/style/custom-style.css
@@ -22,12 +22,13 @@ header,
 .header {
     height: 70px;
     display: flex;
-    
+
     font-weight: bold;
     padding: 0 20px;
 }
 
 .header {
+    background-color: blueviolet;
     justify-content: space-between;
     font-size: 14pt;
 }
@@ -101,6 +102,14 @@ main {
     justify-content: space-evenly;
 }
 
+.main {
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    margin: 0 50px;
+}
+
 h1 {
     font-size: 28pt;
     color: rgb(134, 167, 137);
@@ -141,6 +150,7 @@ h3 {
 .right-panel2,
 .confirmation button {
     width: 100%;
+    height: auto;
 
 }
 
@@ -149,7 +159,7 @@ h3 {
 .left-panel .green-btn,
 .right-panel .green-btn,
 .right-panel2 .green-btn,
-.confirmation button{
+.confirmation button {
     padding: 10px 30px;
     border: none;
     background-color: rgb(134, 167, 137);
@@ -173,8 +183,7 @@ h3 {
 .line-center {
     width: 10px;
     height: auto;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 0 40px;
     background-color: rgb(134, 167, 137);
     border: 1px;
     border-color: rgb(134, 167, 137);
@@ -252,12 +261,12 @@ h3 {
     right: 20px;
 }
 
-.checkbox{
+.checkbox {
     margin-top: 15px;
 }
 
-.checkbox label{
-    margin-left: 5px ;
+.checkbox label {
+    margin-left: 5px;
 }
 
 input[type="checkbox"] {
