--- a/style/pendaftaran-styles.css
+++ b/style/pendaftaran-styles.css
@@ -1,9 +1,10 @@
 .list-paket{
   align-self: center;
+  margin-right: 10px;
 }
 
 .list-paket a {
-  font-size: 14pt;
+  font-size: 14pt; 
   font-weight: bold;
   color: rgb(134, 167, 137);
   border: 3px solid rgb(134, 167, 137);
@@ -18,11 +19,6 @@
 .list-paket a:hover {
   background-color: rgb(134, 167, 137);
   color: rgb(235, 243, 232);
-}
-
-main {
-  display: flex;
-  margin: 20px 60px;
 }
 
 .info-top,
@@ -66,14 +62,6 @@ input,
 .right {
   width: 100%;
   height: 80vh;
-}
-
-.divider {
-  width: 7px;
-  background-color: rgb(134, 167, 137);
-  border: 1px;
-  border-color: rgb(134, 167, 137);
-  border-radius: 20px;
 }
 
 #titleText, .info-top, #locationHeader{
