--- a/style/custom-style.css
+++ b/style/custom-style.css
@@ -98,15 +98,19 @@ header,
 main {
     padding: 0 50px;
     background-color: rgb(255, 255, 255);
-    display: flex;
     justify-content: space-evenly;
 }
 
 .main {
     background-color: aqua;
-    display: flex;
     justify-content: center;
     padding: 20px;
+
+}
+
+main,
+.main {
+    display: flex;
     margin: 0 50px;
 }
 
@@ -141,7 +145,7 @@ h3 {
 .right-panel2 {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: end;
 }
 
 
@@ -150,8 +154,6 @@ h3 {
 .right-panel2,
 .confirmation button {
     width: 100%;
-    height: auto;
-
 }
 
 /* Button Style */
