--- a/views/login-page.ejs
+++ b/views/login-page.ejs
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <link rel="stylesheet" href="style/login-style.css">
     <link rel="stylesheet" href="style/custom-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <script src="script/admin-script.js"></script>
+    <!-- <script src="script/admin-script.js"></script> -->
 </head>
+
 <body>
     <form action="/login" class="form-login" onsubmit="return validateLoginForm()" method="post">
         <div class="logo">
@@ -23,21 +25,24 @@
             </select>
         </div>
         <div class="input-container">
-            <input type="email" placeholder="Email" value="<%= user != null ? user.email : "" %>" />
+            <input type="email" placeholder="Email" value="<%= user != null ? user.email : "" required %>" / >
         </div>
         <div class="input-container">
-            <input type="password" id="password" placeholder="Password" value="<%= user != null ? user.password : "" %>" />
+            <input type="password" id="password" placeholder="Password"
+                value="<%= user != null ? user.password : "" required %>" />
             <span class="toggle-password" onclick="togglePassword()">
                 <i class="far fa-eye"></i>
             </span>
         </div>
         <% if (message) { %>
             <div class="alert-message">
-                Username atau Password yang dimasukkan salah!!!
+                <%= message %>
             </div>
             <% } %>
-        <button class="green-btn">Masuk</button>
+                <button class="green-btn">Masuk</button>
     </form>
 </body>
+
 </html>
+
 </html>
