--- a/views/login-page.ejs
+++ b/views/login-page.ejs
@@ -43,7 +43,7 @@
     </form>
     <script>
         document.getElementById('login-form').addEventListener('submit', function (event) {
-            event.preventDefault(); // Prevent the form from submitting normally
+            event.preventDefault();
             const form = event.target;
             const formData = new FormData(form);
 
