--- a/views/page/halaman-agen.ejs
+++ b/views/page/halaman-agen.ejs
@@ -17,7 +17,7 @@
     </div>
     <div class="navbar-right">
       <span id="welcome-message"></span>
-      <a onclick="logout()">logf</a>
+      <a onclick="logout()">Logout</a>
     </div>
   </header>
   <main>
