--- a/views/page/halaman-agen.ejs
+++ b/views/page/halaman-agen.ejs
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="style/agen-style.css">
-  <link rel="stylesheet" href="style/custom-style.css">
+  <link rel="stylesheet" href="css/agen-style.css">
+  <link rel="stylesheet" href="css/custom-style.css">
   <script src="script/admin-script.js"></script>
 </head>
 
