--- a/views/page/list-akun.ejs
+++ b/views/page/list-akun.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List Akun</title>
-    <link rel="stylesheet" href="style/list_akun.css">
+    <link rel="stylesheet" href="css/list_akun.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="script/admin-script.js"></script>
