--- a/views/page/halaman-agen.ejs
+++ b/views/page/halaman-agen.ejs
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Halaman Agen</title>
+  <link rel="icon" href="img/logo-icon.png" type="image/x-icon">
   <link rel="stylesheet" href="css/agen-style.css">
   <link rel="stylesheet" href="css/custom-style.css">
   <script src="script/admin-script.js"></script>
@@ -16,111 +17,76 @@
       <img src="img/logo2.png" alt="Logo Perusahaan">
     </div>
     <div class="navbar-right">
-      <span id="welcome-message"></span>
-      <a onclick="logout()">Logout</a>
+      <span>
+        <%= user.email %>
+      </span>
+      <%- (!user?'<a href="/">Login</a>':'<a href="/logout">Logout</a>') %>
     </div>
   </header>
-  <main>
-    <div class="left-panel">
-      <div class="info-top1">
-        <h1>Penerimaan Paket</h1>
-      </div>
-      <div class="info-top2">
-        <p>Masukkan data pengirim</p>
-      </div>
-      <div class="form1">
-        <form action="#">
-          <div class="label-horizontal">
-            <label for="nama-pengirim">Nama Pengirim</label>
-          </div>
-          <div class="input-horizontal">
-            <input type="text" id="nama-pengirim" name="nama-pengirim">
-          </div>
-          <div class="label-horizontal">
-            <label for="nomor-pengirim">No. HP</label>
-          </div>
-          <div class="input-horizontal">
-            <input type="text" id="nomor-pengirim" name="nomor-pengirim">
-          </div>
-          <div class="label-horizontal">
-            <label for="deskripsi">Deskripsi</label>
-          </div>
-          <div class="input-horizontal">
-            <input type="text" id="deskripsi" name="deskripsi">
-          </div>
-          <div class="label-horizontal">
-            <label for="berat">Berat(kg)</label>
-          </div>
-          <div class="input-horizontal">
-            <input type="text" id="berat" name="berat">
-          </div>
-          <div class="label-horizontal">
-            <label for="dimensi">Dimensi(kg)</label>
-          </div>
-          <div class="input-horizontal">
-            <input type="text" id="dimensi" name="dimensi">
-          </div>
-          <div class="label-horizontal">
-            <label for="jlh-kirim">Jumlah Kiriman</label>
-          </div>
-          <div class="input-horizontal">
-            <input type="text" id="jlh-kirim" name="jlh-kirim">
-          </div>
-        </form>
-      </div>
+  <div class="container">
+
+    <div class="info">
+      <h1>Penerimaan Paket</h1>
+      <a class="btn-paket" href="/list-paket">List Paket</a>
     </div>
-    <div class="line-center"></div>
-    <div class="right-panel">
-      <div class="btn-list">
-        <a href="#">List Paket</a>
+    <form action="#" method="post" class="form-container">
+      <div class="left-form">
+        <p>Masukkan data pengirim</p>
+        <div class="form-flex">
+          <label for="nama-pengirim">Nama Pengirim</label>
+          <input type="text" name="nama-pengirim">
+        </div>
+        <div class="form-flex">
+          <label for="handphone-pengirim">No. HP</label>
+          <input type="text" name="handphone-pengirim">
+        </div>
+        <div class="form-flex">
+          <label for="deskripsi">Deskripsi</label>
+          <input type="text" name="deskripsi">
+        </div>
+        <div class="form-flex">
+          <label for="berat">Berat</label>
+          <input type="text" name="berat">
+        </div>
+        <div class="form-flex">
+          <label for="dimensi">Dimensi</label>
+          <input type="text" name="dimensi">
+        </div>
+        <div class="form-flex">
+          <label for="jlh-kiriman">Jumlah Kiriman</label>
+          <input type="text" name="jlh-kiriman">
+        </div>
       </div>
-      <div class="info-top2">
+      <div class="line-center"></div>
+      <div class="right-form">
         <p>Masukkan data penerima</p>
-      </div>
-      <div class="form2">
-        <form action="#">
-          <div class="label-horizontal">
-            <label for="nama-penerima">Nama Penerima</label>
-          </div>
-          <div class="input-horizontal">
-            <input type="text" id="nama-penerima" name="nama-penerima">
-          </div>
-          <div class="label-horizontal">
-            <label for="nomor-pengirim">No. HP</label>
-          </div>
-          <div class="input-horizontal">
-            <input type="text" id="nomor-pengirim" name="nomor-pengirim">
-          </div>
-          <div class="label-horizontal">
-            <label for="alamat">Alamat Tujuan</label>
-          </div>
-          <div class="input-horizontal">
-            <textarea id="alamat" name="alamat"></textarea>
-          </div>
-        </form>
-      </div>
-      <div class="info-top2">
+        <div class="form-flex">
+          <label for="nama-penerima">Nama Penerima</label>
+          <input type="text" name="nama-penerima">
+        </div>
+        <div class="form-flex">
+          <label for="handphone-penerima">No. HP</label>
+          <input type="text" name="handphone-penerima">
+        </div>
+        <div class="form-flex">
+          <label for="alamat">Alamat Tujuan</label>
+          <textarea id="alamat" name="alamat"></textarea>
+        </div>
         <p>Memilih zona pengiriman</p>
-      </div>
-      <div class="opsi">
-        <form>
+        <div class="opsi">
           <select id="kecamatan" name="kecamatan">
             <option value="">-- Pilih Kecamatan --</option>
           </select>
-        </form>
-      </div>
-      <div class="opsi">
-        <form>
           <select id="kelurahan" name="kelurahan">
             <option value="">-- Pilih Kelurahan --</option>
           </select>
-        </form>
-      </div>
-      <div class="button-konfirmasi">
+        </div>
         <button type="button" class="button">Konfirmasi</button>
       </div>
-    </div>
-  </main>
+
+    </form>
+  </div>
+
 </body>
 
 </html>
