--- a/public/css/agen-style.css
+++ b/public/css/agen-style.css
@@ -1,79 +1,83 @@
+.container{
+    margin: 15px 30px;
+}
 
+.form-container {
+    display: flex;
+    justify-content: space-evenly;
+}
 
-.info-top3 a {
+.left-form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.right-form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.form-flex{
+    display: block;
+    margin: 5px 0;
+}
+
+p{
+    color: rgb(134, 167, 137);
+    font-size: 12pt;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+a.btn-paket{
     font-size: 16pt;
     font-weight: bold;
-    background-color: rgb(235, 243, 232);
+    background-color: rgb(255, 255, 255);
     color: rgb(134, 167, 137);
     border: 3px solid rgb(134, 167, 137);
     border-radius: 5px;
-    padding: 10px 60px;
+    padding: 10px 40px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-.info-top3 a:hover,
-.info-top3 a:active {
+a.btn-paket:hover,
+a.btn-paket:active {
     background-color: rgb(134, 167, 137);
     color: rgb(235, 243, 232);
 }
 
-.info-top2 {
-    margin-top: 12px;
-}
-
-.info-top3 {
-    text-align: end;
-}
-
-.form1 [type=text] {
-    width: 100%;
-    padding: 10px;
-    margin: 2px 0;
-    display: inline-block;
-    border: 2px solid rgb(134, 167, 137);
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-.form2 [type=text] {
-    width: 100%;
-    padding: 10px;
-    margin: 2px 0;
-    display: inline-block;
-    border: 2px solid rgb(134, 167, 137);
-    border-radius: 4px;
-    box-sizing: border-box;
+.info{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 label {
-    padding: 10px 10px 10px 0;
-    display: inline-block;
+    float: left;
+    width: auto;
     font-weight: bold;
+    margin-top: 10px;
+    margin-right: 5px;
 }
 
 input {
-    padding: 0 10px;
+    float: right;
+    width: 78%;
     outline: none;
-}
-
-.label-horizontal {
-    float: left;
-    width: 25%;
-    margin-top: 2px;
-
-}
-
-.input-horizontal {
-    float: left;
-    width: 75%;
-    margin-bottom: 6px;
+    padding: 10px;
+    border: 2px solid rgb(134, 167, 137);
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
 textarea {
-    width: 100%;
+    float: right;
+    width: 78%;
     height: 15vh;
     border-width: 2px;
     border-color: rgb(134, 167, 137);
@@ -81,6 +85,7 @@ textarea {
     padding: 10px;
     resize: none;
     outline: none;
+    margin-bottom: 20px;
 }
 
 .opsi {
@@ -90,6 +95,7 @@ textarea {
 select {
     width: 100%;
     padding: 10px 20px;
+    margin-bottom: 10px;
     border-width: 2px;
     border-color: rgb(134, 167, 137);
     border-radius: 4px;
@@ -100,23 +106,19 @@ select {
     outline: none;
     appearance: none;
     background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%2386A789"><path d="M7 10l5 5 5-5z"/></svg>');
-    /* Add a custom arrow icon */
     background-size: 24px 24px;
     background-position: 98% 50%;
     background-repeat: no-repeat;
 }
 
-.button-konfirmasi {
-    margin-top: 30px;
-}
-
-.button-konfirmasi .button {
+.button {
     width: 100%;
     background-color: rgb(134, 167, 137);
     border: none;
     border-radius: 4px;
     color: rgb(235, 243, 232);
     padding: 12px 32px;
+    margin-top: 20px;
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
@@ -127,7 +129,7 @@ select {
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
 }
 
-.button-konfirmasi .button:active {
+.button:active {
     transform: translateY(2px);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -144,17 +146,12 @@ select {
 
     label,
     input,
-    .label-horizontal,
-    .input-horizontal {
+    .form-container{
+        display: block;
         float: none;
         width: auto;
     }
 
-    .list1, .list2{
-        float: none;
-        width: auto;
-        margin: 10px 30px;
-    }
 
 
     .info-top3 a {
