--- a/views/page/list-pengantaran.ejs
+++ b/views/page/list-pengantaran.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List Pengantaran</title>
+    <link rel="icon" href="img/logo-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/penentuan-style.css">
     <link rel="stylesheet" href="css/custom-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
